# Rainstormer

./: .gitignore  README.md  main.py  pyproject.toml
rainstormer/: __init__.py
rainstormer/core/: client.py
rainstormer/prompts/: mcts.py  structured.py
rainstormer/schema/: mcts.py  scoring.py  structured_output.py
rainstormer/schema/llm/: message.py
rainstormer/scoring/: __init__.py  reward.py
rainstormer/services/: chat.py  context.py  mcts.py
rainstormer/tools/: __init__.py  brainstorming.py
rainstormer/utils/: config.py  exceptions.py  logger.py
tests/integration/: verify_mcts.py
