[project]
name = "rainstormer"
version = "0.0.1"
description = "A tool to brainstorm and generate ideas using tree-search + AI + simulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "ruff>=0.14.5",
    "sqlalchemy>=2.0.44",
    "pydantic-settings>=2.0.0",
]
